--- a/src/components/portfolio/s.module.scss
+++ b/src/components/portfolio/s.module.scss
@@ -18,4 +18,54 @@
 
 .title {
   text-align: center;
+  margin-bottom: vw(100px);
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+}
+
+
+
+
+
+
+.images {
+  margin-top: 28px;
+  position: relative;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
+.full, .mobile {
+  position: absolute;
+  box-shadow: 1px -1px 20px 0px rgba(0, 0, 0, 0.5);
+  border-radius: 10px 10px 0 0;
+  overflow: hidden;
+}
+
+.full {
+  right: 0;
+  bottom: vw(20px);
+  width: vw(210px);
+
+}
+
+.mobile {
+  right: vw(160px);
+  bottom: 0;
+  width: vw(80px);
+}
+
+.dom {
+ display: inline-block;
+  padding: 12px;
+  border-radius: 10px;
+  background: #FFFFFF;
 }
