--- a/src/components/skills/s.module.scss
+++ b/src/components/skills/s.module.scss
@@ -18,4 +18,75 @@
 
 .title {
   text-align: center;
+  margin-bottom: vw(100px);
+
+  @include HD {
+    margin-bottom: vwh(100px);
+  }
+
+  @include Tablet {
+    margin-bottom: vwt(100px);
+  }
+
+  @include Mobile {
+    margin-bottom: vwm(100px);
+  }
+}
+
+.skills {
+  display: grid;
+  gap: vw(50px);
+  margin-bottom: vw(100px);
+
+  @include HD {
+    gap: vwh(50px);
+    margin-bottom: vwh(100px);
+  }
+
+  @include Tablet {
+    gap: vwt(50px);
+    margin-bottom: vwt(100px);
+  }
+
+  @include Mobile {
+    gap: vwm(50px);
+    margin-bottom: vwm(100px);
+  }
+}
+
+.list {
+  display: flex;
+  justify-content: center;
+  gap: vw(60px);
+
+  @include HD {
+    gap: vwh(60px);
+  }
+
+  @include Tablet {
+    gap: vwt(60px);
+  }
+
+  @include Mobile {
+    gap: vwm(60px);
+  }
+}
+
+
+.item {
+  display: grid;
+  justify-items: center;
+  gap: vw(12px);
+
+  @include HD {
+    gap: vwh(12px);
+  }
+
+  @include Tablet {
+    gap: vwt(12px);
+  }
+
+  @include Mobile {
+    gap: vwm(12px);
+  }
 }
