--- a/src/scss/base/common.scss
+++ b/src/scss/base/common.scss
@@ -6,7 +6,7 @@ html {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  color: #fff;
+  color: #F0F8FF;
   background-color: var(--background);
 }
 
