--- a/src/components/Case/s.module.scss
+++ b/src/components/Case/s.module.scss
@@ -3,7 +3,7 @@
 .card {
   display: grid;
   grid-template-columns: vw(320px) auto;
-  height: vw(380px);
+  height: vw(320px);
   padding: 20px;
   border-radius: 6px;
   border: 1px solid rgba(240, 248, 255, 0.13);
@@ -11,6 +11,11 @@
   &:hover {
     border: 1px solid rgba(240, 248, 255);
   }
+}
+
+.content {
+  display: grid;
+  align-content: space-between;
 }
 
 .type {
@@ -22,7 +27,7 @@
 .line {
   display: flex;
   gap: vw(10px);
-  margin-bottom: vw(40px);
+  margin-bottom: vw(10px);
   cursor: pointer;
 
   svg {
@@ -45,5 +50,21 @@
 
 .technologies {
   font-size: vw(18px);
-  margin-bottom: vw(20px);
+}
+
+.view {
+  position: relative;
+  display: grid;
+  align-items: end;
+  justify-content: end;
+}
+
+.images {
+  width: 315px;
+
+  img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+  }
 }
