--- a/src/components/Projects/s.module.scss
+++ b/src/components/Projects/s.module.scss
@@ -1,30 +1,34 @@
 @import "../../scss/utils";
 
 .wrapper {
-  margin: 0 vw(250px);
+  padding: 40px 0;
+}
+
+
+.title {
+  margin-bottom: vw(16px);
 
   @include HD {
-    margin: 0 vwh(45px);
+    margin-bottom: vwh(16px);
   }
 
   @include Tablet {
-    margin: 0 vwt(12x);
+    margin-bottom: vwt(16px);
   }
 
   @include Mobile {
-    margin: 0 vwm(12px);
+    margin-bottom: vwm(16px);
   }
 }
 
-.title {
-  text-align: center;
-  margin-bottom: vw(100px);
+.text {
+  margin-bottom: 40px;
 }
 
 .cards {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 40px;
+  gap: 20px;
+  margin-bottom: 30px;
 }
 
 
