--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -49,3 +49,18 @@
 .main {
   padding-top: 160px;
 }
+
+.video {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
