--- a/src/components/AboutUs/s.module.scss
+++ b/src/components/AboutUs/s.module.scss
@@ -2,7 +2,13 @@
   max-width: 600px;
   margin-bottom: 150px;
 
-  p {
+  a {
+    color: #8b8e8f;
+  }
+
+  // #11b2b7
+
+  p, li {
     font-size: 18px;
   }
 
