the AboutUs block has been modified

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -50,6 +50,11 @@
   padding-top: 160px;
 }
 
+.about {
+  max-width: 600px;
+  margin-bottom: 150px;
+}
+
 .video {
   position: fixed;
   z-index: -1;
