--- a/src/scss/base/variables.scss
+++ b/src/scss/base/variables.scss
@@ -1,4 +1,7 @@
 :root {
-  --background: #141416;
+  --background-color: #141416;
   --text-primary: #F0F8FF;
+  --link-color: #8b8e8f;
+  --link-color-hover: #8b8e8f;
+  --link-color-active: #8b8e8f;
 }
