--- a/src/components/Job/s.module.scss
+++ b/src/components/Job/s.module.scss
@@ -22,19 +22,6 @@
   margin-bottom: 10px;
 }
 
-.line {
-  display: flex;
-  align-items: baseline;
-  gap: 10px;
-  margin-bottom: 10px;
-
-  svg {
-    stroke: #F0F8FF;
-  }
-}
-
-
-
-.job {
-
+.link {
+  margin-bottom: vw(10px);
 }
