--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -19,10 +19,11 @@
 }
 
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
   padding-top: 160px;
   padding-bottom: 100px;
+  height: 100vh;
   max-height: 100vh;
   display: grid;
   align-content: space-between;
@@ -44,11 +45,6 @@
   font-weight: lighter;
 }
 
-
-
-.main {
-  padding-top: 160px;
-}
 
 .about {
   max-width: 600px;
