--- a/src/components/Nav/s.module.scss
+++ b/src/components/Nav/s.module.scss
@@ -1,5 +1,7 @@
 .nav {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: start;
 }
 
 .left {
@@ -9,6 +11,9 @@
 
   li {
     font-size: 13px;
+    height: 30px;
+    display: inline-flex;
+    align-items: center;
     line-height: 16px;
   }
 }
@@ -16,8 +21,19 @@
 .line {
   position: relative;
   width: 2px;
-  height: 168px;
+  height: 100%;
+  //transform: translateY(-5%);
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.line2 {
+  transition: 0.2s ease;
+  position: absolute;
+  top: 0;
+  left: 3px;
+  height: 100%;
+  width: 1px;
+  background-color: #F4A949;
 }
 
 .toddler {
@@ -42,6 +58,13 @@
   }
 }
 
+.link {
+  display: inline-flex;
+  align-items: center;
+  transition: padding-left 0.2s ease;
+  height: 30px;
+}
+
 .active {
-  text-decoration: underline;
+
 }
