--- a/src/components/Projects/s.module.scss
+++ b/src/components/Projects/s.module.scss
@@ -2,49 +2,45 @@
 
 .cards {
   display: grid;
-  gap: 20px;
-  margin-bottom: 30px;
-}
+  gap: vw(20px);
+  margin-bottom: vw(30px);
 
-.link {
-  display: flex;
-  align-items: center;
-}
+  @include HD {
+    gap: vwh(20px);
+    margin-bottom: vwh(30px);
+  }
 
-.images {
-  margin-top: 28px;
-  position: relative;
+  @include Tablet {
+    gap: vwt(20px);
+    margin-bottom: vwt(30px);
+  }
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  @include Mobile {
+    gap: vwm(20px);
+    margin-bottom: vwm(30px);
   }
 }
 
-.full, .mobile {
-  position: absolute;
-  box-shadow: 1px -1px 20px 0px rgba(0, 0, 0, 0.5);
-  border-radius: 10px 10px 0 0;
-  overflow: hidden;
-}
+.link {
+  display: inline-flex;
+  align-items: center;
 
-.full {
-  right: 0;
-  bottom: vw(20px);
-  width: vw(210px);
+  @media (any-hover: hover) {
+    &:hover {
+      background-color: #2E9AFF;
+      transition: background-color 0.1s linear;
 
-}
+      svg {
+        transform: translateX(4px);
+      }
+    }
+  }
 
-.mobile {
-  right: vw(160px);
-  bottom: 0;
-  width: vw(80px);
-}
+  &:active {
+    background-color: #19548c;
+  }
 
-.dom {
- display: inline-block;
-  padding: 12px;
-  border-radius: 10px;
-  background: #FFFFFF;
+  svg {
+    transition: transform 0.2s linear;
+  }
 }
