--- a/src/scss/base/variables.scss
+++ b/src/scss/base/variables.scss
@@ -1,6 +1,6 @@
 :root {
   --background-color: #141416;
-  --text-primary: #F0F8FF;
+  --text-primary: #ECEEFF;
   --link-color: #8b8e8f;
   --link-color-hover: #8b8e8f;
   --link-color-active: #8b8e8f;
