--- a/src/components/Links/s.module.scss
+++ b/src/components/Links/s.module.scss
@@ -20,14 +20,30 @@
 .item {
   a {
     display: inline-block;
+    position: relative;
+    margin: 4px;
+    transition: transform 0.2s ease-in;
+
+    &:before {
+      position: absolute;
+      content: "";
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: all 0.2s ease;
+      border-radius: 50%;
+      width: vw(30px);
+      height: vw(30px);
+    }
 
     &:hover {
-      svg {
-        fill: #F4A949;
+      transform: scale(1.1);
+    }
 
-        rect {
-          fill: #F4A949;
-        }
+    &:active {
+      &:before {
+        box-shadow: 0 1px 9px 1px #c0c0c0;
+        transition: all 0.1s ease;
       }
     }
   }
@@ -36,6 +52,7 @@
     width: vw(32px);
     height: vw(32px);
     fill: #F0F8FF;
+    transition: padding 0.2s ease-in-out;
 
     rect {
       fill: #F0F8FF;
