--- a/src/components/Finally/s.module.scss
+++ b/src/components/Finally/s.module.scss
@@ -19,3 +19,45 @@
 .text {
   margin-bottom: 40px;
 }
+
+.email {
+  padding-top: 50px;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.box {
+
+  position: relative;
+}
+
+.image {
+  animation-name: space;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  position: absolute;
+  top: -160px;
+  right: 50px;
+z-index: -1;
+  margin-top: 200px;
+  width: 220px;
+  height: 400px;
+  //filter: drop-shadow(0 0 25px rgba(238, 238, 238, 0.2)) brightness(70%);
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
+@keyframes space {
+  0% {
+    filter: drop-shadow(0 0 25px rgba(238, 238, 238, 0.2)) brightness(70%);
+  }
+
+  100% {
+    filter: drop-shadow(0 0 35px rgba(238, 238, 238, 0.2)) brightness(70%);
+  }
+}
