--- a/src/components/Footer/s.module.scss
+++ b/src/components/Footer/s.module.scss
@@ -1,4 +1,6 @@
 .footer {
-  margin-top: 320px;
-  margin-bottom: 120px;
+  margin-top: 60px;
+  margin-bottom: 100px;
+  font-size: 16px;
+  max-width: 360px;
 }
