--- a/src/components/Job/s.module.scss
+++ b/src/components/Job/s.module.scss
@@ -9,9 +9,36 @@
   border-radius: vw(8px);
   transition: border-color 0.15s ease-in-out;
 
+  @include HD {
+    gap: vwh(30px);
+    padding: vwh(20px);
+    border: vwh(1px) solid transparent;
+    border-radius: vwh(8px);
+  }
+
+  @include Tablet {
+
+  }
+
+  @include Mobile {
+
+  }
+
   @media (hover: hover) and (pointer: fine) {
     &:hover {
       border: vw(1px) solid #F0F8FF;
+
+      @include HD {
+        border: vwh(1px) solid #F0F8FF;
+      }
+
+      @include Tablet {
+        border: vwt(1px) solid #F0F8FF;
+      }
+
+      @include Mobile {
+        border: vwm(1px) solid #F0F8FF;
+      }
     }
   }
 }
@@ -19,17 +46,68 @@
 .dates {
   padding-top: vw(3px);
   font-weight: lighter;
-  font-size: 14px;
+  font-size: vw(14px);
+
+  @include HD {
+    padding-top: vwh(3px);
+    font-size: vwh(14px);
+  }
+
+  @include Tablet {
+    padding-top: vwt(3px);
+    font-size: vwt(14px);
+  }
+
+  @include Mobile {
+    padding-top: vwm(3px);
+    font-size: vwm(14px);
+  }
 }
 
 .name {
-  margin-bottom: 10px;
+  margin-bottom: vw(10px);
+
+  @include HD {
+    margin-bottom: vwh(10px);
+  }
+
+  @include Tablet {
+    margin-bottom: vwt(10px);
+  }
+
+  @include Mobile {
+    margin-bottom: vwm(10px);
+  }
 }
 
 .link {
   margin-bottom: vw(10px);
+
+  @include HD {
+    margin-bottom: vwh(10px);
+  }
+
+  @include Tablet {
+    margin-bottom: vwt(10px);
+  }
+
+  @include Mobile {
+    margin-bottom: vwm(10px);
+  }
 }
 
 .description {
   font-size: vw(16px);
+
+  @include HD {
+    font-size: vwh(16px);
+  }
+
+  @include Tablet {
+    font-size: vwt(16px);
+  }
+
+  @include Mobile {
+    font-size: vwm(16px);
+  }
 }
