--- a/src/components/Projects/s.module.scss
+++ b/src/components/Projects/s.module.scss
@@ -28,13 +28,37 @@
   transition: color 0.2s ease;
   gap: vw(5px);
 
+  @include HD {
+    gap: vwh(5px);
+  }
+
+  @include Tablet {
+    gap: vwt(5px);
+  }
+
+  @include Mobile {
+    gap: vwm(5px);
+  }
+
   @media (any-hover: hover) {
     &:hover {
       color: var(--link-color-hover);
 
       svg {
         fill: var(--link-color-hover);
-        transform: translateX(4px);
+        transform: translateX(vw(4px));
+
+        @include HD {
+          transform: translateX(vwh(4px));
+        }
+
+        @include Tablet {
+          transform: translateX(vwt(4px));
+        }
+
+        @include Mobile {
+          transform: translateX(vwm(4px));
+        }
       }
     }
   }
@@ -45,7 +69,6 @@
 
     svg{
       transition: fill 0.1s ease;
-
       fill: var(--link-color-active);
     }
   }
@@ -55,5 +78,21 @@
     transition: transform 0.2s linear, fill 0.2s ease;
     width: vw(19px);
     height: vw(30px);
+
+    @include HD {
+      width: vwh(19px);
+      height: vwh(30px);
+    }
+
+    @include Tablet {
+      width: vwt(19px);
+      height: vwt(30px);
+    }
+
+    @include Mobile {
+      width: vwm(19px);
+      height: vwm(30px);
+    }
+
   }
 }
